[package]
name = "mtag"
version = "0.4.1"
edition = "2018"
description = "A lightweight CLI utility for changing mpeg-4 tags and artwork."
authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/insomnimus/mtag"
keywords = [
	"cli", "media", "tag", "mpeg-4", "m4b",
]
categories = [
	"command-line-utilities", "multimedia::encoding",
]

[dependencies]
clap = "3.0.0-beta.2"
mp4ameta = "0.11.0"

[build-dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
