[package]
name = "mtag"
version = "0.5.2"
edition = "2021"
description = "A lightweight CLI utility for changing mpeg-4 tags and artwork."
authors = [ "Taylan Gökkaya <insomnimus.dev@gmail.com>" ]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/insomnimus/mtag"
keywords = [
	"cli", "media", "tag", "mpeg-4", "m4b",
]
categories = [
	"command-line-utilities", "multimedia::encoding",
]

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.0", features = ["cargo", "env", "unicode", "wrap_help"] }
mp4ameta = "0.11.0"
wild = "2.0.4"

[build-dependencies]
clap = { version = "3.0.0", features = ["cargo", "env", "unicode", "wrap_help"] }
clap_complete = "3.0.2"
